--- a/config.template.json
+++ b/config.template.json
@@ -4,5 +4,13 @@
     },
     "meta": {
         "name": "E.M.M.A. - Emotion Monitoring Algorithm"
+    },
+    "database": {
+        "host": "0.0.0.0",
+        "port": 28015,
+        "authKey": "",
+        "db": "emma",
+        "positiveTable": "positive",
+        "negativeTable": "negative"
     }
 }
