fixed config template for database

--- a/config.template.json
+++ b/config.template.json
@@ -8,7 +8,8 @@
     "database": {
         "host": "0.0.0.0",
         "port": 28015,
-        "authKey": "",
+        "user": "",
+        "password": "",
         "db": "emma",
         "positiveTable": "positive",
         "negativeTable": "negative"
