--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/EMMA-Emotion-AI/EMMA-Backend.git"
   },
-  "author": "Chris (NullDev)",
+  "author": "Chris (NullDev) & Joseph (Azgeb)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/EMMA-Emotion-AI/EMMA-Backend/issues"
